--- a/FluUtils/FluUtils.vcxproj
+++ b/FluUtils/FluUtils.vcxproj
@@ -71,6 +71,14 @@
     <Lib>
       <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
+    <ClCompile>
+      <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
+    </ClCompile>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <ClCompile>
+      <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
+    </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'" Label="Configuration">
     <ClCompile>
