--- a/FluControls/FluControls.vcxproj
+++ b/FluControls/FluControls.vcxproj
@@ -159,12 +159,16 @@
     <ClCompile Include="FluListView.cpp" />
     <ClCompile Include="FluListViewItemDelegate.cpp" />
     <ClCompile Include="FluLoopView.cpp" />
+    <ClCompile Include="FluRoundMenuView.cpp" />
+    <ClCompile Include="FluMenuAniMgr.cpp" />
     <ClCompile Include="FluMenuBar.cpp" />
+    <ClCompile Include="FluMenuItemDelegate.cpp" />
     <ClCompile Include="FluMessageBox.cpp" />
     <ClCompile Include="FluMSNavigationItem.cpp" />
     <ClCompile Include="FluMSNavigationView.cpp" />
     <ClCompile Include="FluMSWindow.cpp" />
     <ClCompile Include="FluPPushButton.cpp" />
+    <ClCompile Include="FluRoundMenu.cpp" />
     <ClCompile Include="FluScaleButton.cpp" />
     <ClCompile Include="FluScrollArea.cpp" />
     <ClCompile Include="FluScrollBar.cpp" />
@@ -173,6 +177,8 @@
     <ClCompile Include="FluScrollBarTrunk.cpp" />
     <ClCompile Include="FluScrollDelegate.cpp" />
     <ClCompile Include="FluSettingsVersionBox.cpp" />
+    <ClCompile Include="FluShortcutMenuItemDelegate.cpp" />
+    <ClCompile Include="FluSubMenuItemWidget.cpp" />
     <ClCompile Include="FluTableItemDelegate.cpp" />
     <ClCompile Include="FluTableView.cpp" />
     <ClCompile Include="FluTeachingTip.cpp" />
@@ -302,6 +308,13 @@
     <QtMoc Include="FluMSNavigationView.h" />
     <QtMoc Include="FluMSWindow.h" />
     <QtMoc Include="FluMSNavigationItem.h" />
+    <QtMoc Include="FluRoundMenuView.h" />
+    <ClInclude Include="FluMenuAniMgr.h" />
+    <ClInclude Include="FluMenuAniType.h" />
+    <QtMoc Include="FluMenuItemDelegate.h" />
+    <QtMoc Include="FluRoundMenu.h" />
+    <QtMoc Include="FluShortcutMenuItemDelegate.h" />
+    <QtMoc Include="FluSubMenuItemWidget.h" />
     <ClInclude Include="FluWindowKitWidget.h" />
     <QtMoc Include="FluTeachingTip.h" />
     <QtMoc Include="FluTriangle.h" />
