--- a/FluExamples/FluExamples.vcxproj.filters
+++ b/FluExamples/FluExamples.vcxproj.filters
@@ -212,6 +212,9 @@
     <ClCompile Include="FluRoundMenuDemo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FluShortcutPickerDemo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="FluChangeBgDemo.h">
@@ -359,6 +362,9 @@
       <Filter>Header Files</Filter>
     </QtMoc>
     <QtMoc Include="FluSplitterDemo.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="FluShortcutPickerDemo.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
