--- a/.github/workflows/Windows-Qt5.8.0.yml
+++ b/.github/workflows/Windows-Qt5.8.0.yml
@@ -1,4 +1,4 @@
-name: Windows-Qt6.5.1
+name: Windows-Qt5.8.0
 on: 
   push:
     paths:
@@ -33,7 +33,7 @@ on:
       - 'FluWinGallery/**'
       - 'res/**'
       - 'StyleSheet/**'
-      - '.github/workflows/Windows-Qt6.5.1.yml'
+      - '.github/workflows/Windows-Qt5.8.0.yml'
 jobs:
   build:
     name: Build
@@ -42,10 +42,10 @@ jobs:
       matrix:
         os: [windows-latest]
         include:
-          - qt_ver: 6.5.1        
-            qt_arch: win64_msvc2019_64
-            msvc_arch: x64
-            qt_arch_install: msvc2019_64  
+          - qt_ver: 5.8.0    
+            qt_arch: win32_msvc2015_32
+            msvc_arch: x86
+            qt_arch_install: msvc2019_32
     env:
       targetName: FluWinGallery.exe
       fileName: FluWinGallery
@@ -66,7 +66,7 @@ jobs:
           version: ${{ matrix.qt_ver }}
           arch: ${{ matrix.qt_arch }}
           cache: ${{steps.cache-qt.outputs.cache-hit}}
-          modules: 'qt5compat qtmultimedia qtshadertools qtimageformats qtspeech qt3d qtscxml'
+          modules: 'qtmultimedia qtshadertools qtimageformats qtspeech qt3d qtscxml'
           
       - name: Msvc build & Package
         id: build
@@ -76,7 +76,7 @@ jobs:
           ninja --version
           mkdir build
           cd build
-          cmake -DCMAKE_MESSAGE_LOG_LEVEL=STATUS -DCMAKE_PREFIX_PATH=D:\a\FluentUI\Qt\${{ matrix.qt_ver }}\msvc2019_64 -DCMAKE_C_COMPILER=cl -DCMAKE_CXX_COMPILER=cl -DCMAKE_BUILD_TYPE=Release -GNinja ..
+          cmake -DCMAKE_MESSAGE_LOG_LEVEL=STATUS -DCMAKE_PREFIX_PATH=D:\a\FluentUI\Qt\${{ matrix.qt_ver }}\msvc2015_32 -DCMAKE_C_COMPILER=cl -DCMAKE_CXX_COMPILER=cl -DCMAKE_BUILD_TYPE=Release -GNinja ..
           cmake --build . --target all --config Release --parallel
           cmake --build . --target package
           echo winSdkDir=%WindowsSdkDir% >> %GITHUB_ENV%
