--- a/.github/workflows/Windows-Qt5.9.0.yml
+++ b/.github/workflows/Windows-Qt5.9.0.yml
@@ -1,4 +1,4 @@
-name: Windows-Qt5.8.0
+name: Windows-Qt5.9.0
 on: 
   push:
     paths:
@@ -16,7 +16,7 @@ on:
       - 'FluWinGallery/**'
       - 'res/**'
       - 'StyleSheet/**'
-      - '.github/workflows/Windows-Qt6.5.1.yml'
+      - '.github/workflows/Windows-Qt5.9.0.yml'
   pull_request:
     paths:
       - '*.sln'
@@ -33,7 +33,7 @@ on:
       - 'FluWinGallery/**'
       - 'res/**'
       - 'StyleSheet/**'
-      - '.github/workflows/Windows-Qt5.8.0.yml'
+      - '.github/workflows/Windows-Qt5.9.0.yml'
 jobs:
   build:
     name: Build
@@ -42,10 +42,10 @@ jobs:
       matrix:
         os: [windows-latest]
         include:
-          - qt_ver: 5.8.0    
-            qt_arch: win32_msvc2015_32
+          - qt_ver: 5.9.0    
+            qt_arch: win32_msvc2015
             msvc_arch: x86
-            qt_arch_install: msvc2019_32
+            qt_arch_install: msvc2015_32
     env:
       targetName: FluWinGallery.exe
       fileName: FluWinGallery
@@ -76,7 +76,7 @@ jobs:
           ninja --version
           mkdir build
           cd build
-          cmake -DCMAKE_MESSAGE_LOG_LEVEL=STATUS -DCMAKE_PREFIX_PATH=D:\a\FluentUI\Qt\${{ matrix.qt_ver }}\msvc2015_32 -DCMAKE_C_COMPILER=cl -DCMAKE_CXX_COMPILER=cl -DCMAKE_BUILD_TYPE=Release -GNinja ..
+          cmake -DCMAKE_MESSAGE_LOG_LEVEL=STATUS -DCMAKE_PREFIX_PATH=D:\a\FluentUI\Qt\${{ matrix.qt_ver }}\msvc2015 -DCMAKE_C_COMPILER=cl -DCMAKE_CXX_COMPILER=cl -DCMAKE_BUILD_TYPE=Release -GNinja ..
           cmake --build . --target all --config Release --parallel
           cmake --build . --target package
           echo winSdkDir=%WindowsSdkDir% >> %GITHUB_ENV%
