--- a/.github/workflows/Windows-Qt5.9.0.yml
+++ b/.github/workflows/Windows-Qt5.9.0.yml
@@ -66,7 +66,7 @@ jobs:
           version: ${{ matrix.qt_ver }}
           arch: ${{ matrix.qt_arch }}
           cache: ${{steps.cache-qt.outputs.cache-hit}}
-          modules: 'qtmultimedia qtshadertools qtimageformats qtspeech qt3d qtscxml'
+          modules: 'qtmultimedia qtspeech qtimageformats qt3d qtscxml'
           
       - name: Msvc build & Package
         id: build
